--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -22,6 +22,24 @@ body {
 	margin: 0;
 }
 
+div {
+	margin: 0;
+	padding: 0;
+}
+
 h1 {
 	margin: 0;
+}
+
+#app {
+	height: 100%;
+}
+
+#main-canvas {
+	display: block;
+	margin: 0;
+	padding: 0;
+	border: 0 none;
+	width: 100%;
+	height: 100%;
 }
