--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -43,3 +43,22 @@ h1 {
 	width: 100%;
 	height: 100%;
 }
+
+#main-progress {
+	position: absolute;
+	top: 80vh;
+	right: 20vw;
+	left: 20vw;
+	max-width: 400px;
+	text-align: center;
+	display: none;
+	margin: auto;
+	border: 1px solid hsl(210, 50%, 95%);
+	border-radius: 3px;
+	background-image: linear-gradient(to bottom, hsl(30, 60%, 50%), hsl(30, 50%, 10%));
+	background-repeat: no-repeat;
+}
+
+#main-progress.visible {
+	display: block;
+}
